src/np222kk/dv507/a2/test/cases/negative/test_print.ofp
void main() {
    int[] iArr = {1,0};
    print(iArr);
    println(iArr);
}